syntax = "proto3";

// Manages people in the system(s)
// People can be clients, users, admins or any person.
package peoplepb.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service PeopleSvc {
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      post: "/v1/people/update";
      body: "*";
    };
  };
  rpc Save(SaveRequest) returns (SaveResponse) {
    option (google.api.http) = {
      post: "/v1/people/save";
      body: "*";
    };
  };
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      post: "/v1/people/get";
      body: "*";
    };
  };
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      post: "/v1/people/list";
      body: "*";
    };
  };
  rpc PinParse(PinParseRequest) returns (PinParseResponse) {
    option (google.api.http) = {
      post: "/v1/people/pin";
      body: "*";
    };
  };
}

message PinParseRequest {
  string pin = 1;
}

message PinParsePayload {
  Dob dob = 1;
  string gender = 2;
}

message PinParseResponse {
  PinParsePayload payload = 1;
}

message SaveRequest{
  Person data = 1;
}

message SavePayload {
  string id = 1;
}

message SaveResponse{
  SavePayload payload = 1;
}

message UpdateRequest{
  Person data = 1;
}

message UpdateResponse{
}

message ListText {
  repeated string list = 1;
}

message ListRequest{
  map<string,ListText> filters = 1;
}

message ListResponse{
  repeated Person payload = 1;
}

message GetRequest{
  string id = 1;
}

message GetResponse{
  Person payload = 1;
}

message DOB {
  uint32 year  = 1;
  uint32 month  = 2;
  uint32 day  = 3;
}

message IdNumberReponse {
  google.protobuf.Struct  payload = 1; 
}

message Person{
  string id = 1 [json_name = "id"];;
  map<string,string> id_numbers = 2 [json_name = "id_numbers"];
  string login_email = 3 [json_name = "login_email"];
  string name = 4 [json_name = "name"];
  string full_name = 5 [json_name = "full_name"];
  DOB dob = 6 [json_name = "dob"];
  string gender = 7 [json_name = "gender"];
  map<string,string> emails = 8 [json_name = "emails"];
  map<string,string> phones = 9 [json_name = "phones"];
  repeated string labels = 10 [json_name = "labels"];
  map<string,string> attr = 11 [json_name = "attr"];
  google.protobuf.Timestamp created_at = 12 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 13 [json_name = "updated_at"];
}